# DBQuaest

./: README.md  default.nix  pyproject.toml  requirements.txt  setup.py
src/dbquaest/: constants.py  database.py  exam.py  make_test.py  question_model.py  settings.py  tex.py  utils.py
src/dbquaest/electromagnetism/: electrodynamics.py  electromagnetic_induction.py  electrostatic.py  induced_magnetic_field.py  magnetism.py  modelo.py
src/dbquaest/fluids/: hydrodynamics.py  hydrostatic.py
src/dbquaest/mechanics/: conservation_of_energy.py  conservation_of_momentum.py  newtons_law.py  particle_system.py  work_and_energy.py
src/dbquaest/modern_physics/: quantum_physics.py
src/dbquaest/quantum_physics/: atomic_model.py  bohrs_model.py  particle_wave_duality.py  potential_well.py  schrodinger_equation.py  tunneling.py  uncertainty_principle.py
src/dbquaest/relativity/: special_relativity.py
src/dbquaest/thermodynamics/: zero_law.py
src/dbquaest/waves/: mhs.py  waves.py
src/tests/: check_correction.ipynb  check_database.ipynb  check_model.ipynb  check_student.ipynb  check_test.ipynb  check_valores.ipynb  dbquaest.sqlite3  dbquaest.sqlite3-journal  main.aux  main.tex  main_result.tex  notebook.ipynb  report.tex
src/tests/result/: result_0.tex  result_1.tex
