[project]
name = "dbquaest"
version = "2022.10.dev0"
authors = [
  { name="Flaviano Williams Fernandes", email="flaviano.fernandes@ifpr.edu.br" },
]
description = "Exercise data base"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/flavianowilliams"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
